# strmatch

./: Cargo.toml  Justfile  LICENSE-MIT  README.md
src/: lib.rs  main.rs
