[package]
name = "strmatch"
authors = ["Felix Prasanna <fpx@mit.edu>"]
license = "MIT OR Apache-2.0"
description = "Baby compile-time regex's"
documentation = "docs.rs/strmatch"
categories = ["text-processing", "parsing"]
keywords = ["matching", "patterns", "macro"]
version = "0.1.0"
edition = "2021"
readme = "README.ms"
repository = "https://github.com/fprasx/strmatch"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = { version = "1.0" }
syn = { version = "1.0", features = ["parsing", "printing"] }
proc-macro-error = "1.0"
